# vision-factory

./: .gitignore  README.md  pyproject.toml
docs/: architecture.md  backends.md  development.md  hardware.md
e2e/: Dockerfile.base  Dockerfile.e2e.j2  README.md  config.py  docker-compose.yaml  entrypoint.sh  run.py  test_harness.py  viz_node.py
e2e-output/: e2e-report.md
e2e-output/run_20260130_164416_yolo_cuda/: Dockerfile
e2e-output/run_20260130_164416_yolo_cuda/package/: setup.py
e2e-output/run_20260130_212646_yolo_cuda/: e2e-report.md
generator/: __init__.py  __main__.py  cli.py  context.py  engine.py  manifest.py  resolver.py
manifests/: bytetrack.yaml  depth_anything.yaml  florence.yaml  grounding_dino.yaml  rtmpose.yaml  segment_anything.yaml  yolo.yaml  zoedepth.yaml
model_templates/models/: depth_anything.py.j2  grounding_dino.py.j2  yolo.py.j2
models/: base_model.py
models/bytetrack/: manifest.yaml
models/depth_anything/: manifest.yaml  model.py
models/florence/: manifest.yaml
models/grounding_dino/: manifest.yaml  model.py
models/rtmpose/: manifest.yaml
models/segment_anything/: manifest.yaml
models/yolo/: manifest.yaml  model.py  model_base.py  model_onnx.py  model_tensorrt.py
models/zoedepth/: manifest.yaml
specs/: basics.md  dump.md  generator.md  manifest-driven-codegen.md  onnx.md  research.md  specs.md  structure.md  supported_models.md  tensorrt.md
tests/: conftest.py  test_cli.py  test_engine.py  test_manifest.py  test_resolver.py
vision_factory.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
(+56 files in other folders)
