[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "vision-factory"
version = "0.1.0"
description = "ROS2 vision package generator"
requires-python = ">=3.10"
dependencies = [
    "jinja2>=3.1",
    "pyyaml>=6.0",
    "pydantic>=2.0",
    "click>=8.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-tmp-files",
    "httpx>=0.27",
]

[project.scripts]
vision-gen = "generator.cli:main"

[tool.setuptools.packages.find]
include = ["generator*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
